--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
     box-sizing:border-box;
     list-style: none;
     text-decoration: none;
+    padding: 0;
+    margin: 0;
 }
 .app {
     width:100vw;
